FIX: adjust logo spacing for the main page

--- a/_sass/ubizo.scss
+++ b/_sass/ubizo.scss
@@ -248,6 +248,12 @@ figure.ubi-image-leadstory {
     }
 }
 
+// Logo spacing for the main page
+.content .column figure {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 
 
 // Fonts last?
